# ElmQuizduell

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Quizduell.c  Quizduell.h  Quizduell_Config.c  Quizduell_Config.h  Quizduell_Connection.c  Quizduell_Connection.h  Quizduell_Controller.c  Quizduell_Controller.h  Quizduell_Crypto.c  Quizduell_Crypto.h  Quizduell_Game_Json.c  Quizduell_Game_Json.h  Quizduell_Structures.c  Quizduell_Structures.h  Quizduell_View.c  Quizduell_View.h  README  Structures.h  base64.c  qkgermany.pem
cmake/Modules/: FindGCrypt.cmake  FindJson-C.cmake  FindLibBsd.cmake
data/: CMakeLists.txt
src/: CMakeLists.txt  Quizduell_Controller.c  Quizduell_Game_Json.c  Quizduell_Structures.c  base64.c  quizduell.c  quizduell_crypto.c
src/include/: Quizduell_Config.h  Quizduell_Config.h.in  Quizduell_Game_Json.h
src/view/: Quizduell_Games_List.c  Quizduell_View_Private.h  quizduell_category.c  quizduell_game_stat.c  quizduell_new_game.c  quizduell_preferences.c  quizduell_search_player.c
view/: Quizduell_Category.c  Quizduell_Game_Stat.c  Quizduell_Games_List.c  Quizduell_Login.c  Quizduell_New_Game.c  Quizduell_Question.c  Quizduell_Search_Player.c  Quizduell_View_Private.h
