cmake_minimum_required(VERSION 2.6)
project(ElmQuizduell C)
set(VMAJ 0)
set(VMIN 1)
set(VMIC 1)

set(PACKAGE ${CMAKE_PROJECT_NAME})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules")

find_package(Gettext)
find_package(Eina REQUIRED)
find_package(Threads REQUIRED)
find_package(Ecore REQUIRED)
find_package(Ecore COMPONENTS evas x file con)
find_package(Evas REQUIRED)
find_package(Edje REQUIRED)
find_package(Elementary REQUIRED)
find_package(LibBsd REQUIRED)
find_package(Json-C REQUIRED)
find_package(GCrypt REQUIRED)

set(BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin/")
set(LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib/")
set(DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/${CMAKE_PROJECT_NAME}")
set(CERTS_DIR "${DATA_DIR}/certs/")
set(CONFIG_DIR "${DATA_DIR}/config/")
set(THEME_DIR "${DATA_DIR}/theme/")
set(LOCALEDIR "${DATA_DIR}/locale")
set(SYSTEMD_SYSTEM_UNITS_DIR "${LIB_DIR}/systemd/system")
set(SYSTEMD_USER_UNITS_DIR "${LIB_DIR}/systemd/user")

if (0)
    if(GETTEXT_FOUND)
       add_subdirectory(po)
       set(HAVE_GETTEXT 1)
    else()
       set(HAVE_GETTEXT 0)
       message(WARNING "Gettext not found: Internationalisation turned off")
    endif()
endif()

add_subdirectory(src)
add_subdirectory(data)

include(InstallRequiredSystemLibraries)
set(CPACK_GENERATOR "RPM")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A client implementation of a popular trivia game")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
set(CPACK_PACKAGE_VERSION ${VMAJ}.${VMIN}.${VMIC})
set(CPACK_RPM_PACKAGE_LICENSE BSD)
set(CPACK_RPM_PACKAGE_GROUP "Games")
set(CPACK_RPM_PACKAGE_DESCRIPTION "A client implementation of a popular trivia game")
include(CPack)
